--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
   <section class="container">
     <div class="row">
       <div class="col-sm-6">
-        <p>Su di me:</p>
+        <p>About me:</p>
         <ul>
-			<li>Femmmina</li>
-			<li>Nata il 13 agosto 2013</li>
-			<li>Razza europea</li>
+			<li>European female cat</li>
+			<li>Born on 13 August 2013</li>
+			<li>Black and white</li>
 		</ul>
       </div>
       <div class="col-sm-6">
-        <p>Cibo preferito:</p>
+        <p>Favourite food:</p>
         <ul>
-			<li>Pollo</li>
-			<li>Pesce</li>
+			<li>Chicken</li>
+			<li>Fish</li>
 		</ul>
       </div>
       </div>
